# USEagent

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .useagent-stopper  Dockerfile  LICENSE  README.md  collect-swe-results.sh  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: docker.yml  linting.yml  test.yml
app/: config.py  main.py  run_task.py  task_runner.py  utils.py
app/agents/: meta_agent.py  search_code_agent.py
app/meta_agent/: meta_agent.py
app/state/: git_repo.py  state.py
app/tasks/: usebench_task.py
app/tools/: base.py  bash.py  edit.py
microagents/: README.md  ccpp.microagent.md  environments.microagent.md  git.microagent.md  ssh.microagent.md
resources/: CONTRIBUTING.md  USEBench-Instructions.md  swe_verified_ids_shuffled.txt
scripts/: example-action-github.sh  example-answer-github.sh  example-django-github.sh  example-github.sh  example-local.sh  example-merge-langchain.sh  example-openai-local.sh  example-swebench.sh  example-usebench.sh
scripts/experiments/: run-swebench-gemini.sh  run-swebench.sh
tests/: test_config.py  test_example.py
tests/agents/: test_advisor_agent.py  test_checklist_agent.py  test_doubt_checking.py  test_edit_code_agent.py  test_meta_agent.py  test_probing_agent.py  test_run_test_agent.py  test_search_agent.py  test_vcs_agent.py
tests/common/: test_context_window.py  test_fitting_messages_into_context_window.py  test_heredoc_utilities.py  test_is_utf8_encoding.py  (+2 more)
useagent/: config.py  flags.py  main.py  task_runner.py  utils.py
(+137 files in other folders)
