[project]
name = "useagent-turbo-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "usebench @ git+ssh://git@github.com/nus-apr/use-bench.git@0a985ae",
    "loguru>=0.7.3",
    "pydantic-ai[logfire]>=0.4.9",
    "pytest-asyncio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-random-order",
    "pytest-cov",
    "black==25.1.0",
    "isort==6.0.1",
    "pyupgrade==3.20.0",
    "ruff==0.12.3",
    "pyright==1.1.403",
    "pre-commit==4.2.0",
]

[tool.setuptools]
packages = ["useagent"]

[tool.setuptools.package-dir]
useagent = "useagent"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
